--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "ask-sdk-core": "^2.0.0",
-    "ask-sdk-model": "^1.0.0",
-    "i18next": "^11.8.0",
-    "i18next-sprintf-postprocessor": "^0.2.2"
+    "ask-sdk-model": "^1.0.0"
   }
 }
